# AI-Zoom-Assistant

./: .gitignore  QUICKSTART.md  README.md  Real-Time_Zoom_Meeting_Transcription_Project_Report.md  architecture_diagram.puml  ngrok.yml  run_all.bat
backend/: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  README.md  alembic.ini  deploy_ngrok.bat  deploy_tunnel.bat  main.py  pyproject.toml  pyrightconfig.json  start_tunnel.bat  start_tunnel.sh  test_audio_download.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  002_add_meeting_table.py  003_add_missing_meeting_columns.py
backend/app/: __init__.py
backend/app/api/routes/: ai.py  audio.py  control.py  meeting.py
backend/app/core/: config.py  websocket_manager.py
backend/app/models/: __init__.py  conversation.py  database.py
backend/app/schemas/: ai.py  audio.py  control.py  meeting.py
backend/app/services/: __init__.py  ai_service.py  audio_processor.py  gladia_client.py  meeting_service.py  realtime_audio_handler.py  tts_service.py
backend/scripts/: init_services.py  initialize_audio_handler.py  startup.py  test_setup.py
frontend/: README.md  config-overrides.js  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AudioVisualizer.tsx  ControlPanel.tsx  ConversationPanel.tsx  Header.tsx  MeetingPanel.tsx  StatusPanel.tsx
frontend/src/hooks/: useAudioRecorder.ts
frontend/src/services/: api.ts
